; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libfetch/extr_common.c_fetch_seterr.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libfetch/extr_common.c_fetch_seterr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetcherr = type { i8*, i32 }

@fetchLastErrCode = common dso_local global i32 0, align 4
@fetchLastErrString = common dso_local global i32 0, align 4
@MAXERRSTRING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fetch_seterr(%struct.fetcherr* %0, i32 %1) #0 {
  %3 = alloca %struct.fetcherr*, align 8
  %4 = alloca i32, align 4
  store %struct.fetcherr* %0, %struct.fetcherr** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.fetcherr*, %struct.fetcherr** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call %struct.fetcherr* @fetch_finderr(%struct.fetcherr* %5, i32 %6)
  store %struct.fetcherr* %7, %struct.fetcherr** %3, align 8
  %8 = load %struct.fetcherr*, %struct.fetcherr** %3, align 8
  %9 = getelementptr inbounds %struct.fetcherr, %struct.fetcherr* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* @fetchLastErrCode, align 4
  %11 = load i32, i32* @fetchLastErrString, align 4
  %12 = load i32, i32* @MAXERRSTRING, align 4
  %13 = load %struct.fetcherr*, %struct.fetcherr** %3, align 8
  %14 = getelementptr inbounds %struct.fetcherr, %struct.fetcherr* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @snprintf(i32 %11, i32 %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %15)
  ret void
}

declare dso_local %struct.fetcherr* @fetch_finderr(%struct.fetcherr*, i32) #1

declare dso_local i32 @snprintf(i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
